--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=364px, initial-scale=1.0" />
     <title>Casa De Elna | Restaurante</title>
   </head>
   <body>
