--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Casa De Elna | Restaurante</title>
+    <title>Casa De Elna | Menu</title>
   </head>
   <body>
     <div id="root"></div>
